--- a/CinemaProject.Angular/src/index.html
+++ b/CinemaProject.Angular/src/index.html
@@ -12,11 +12,18 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-      <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
-  <body class="mat-typography">
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+  </head>
+  <body
+    oncopy="return false;"
+    oncut="return false;"
+    onpaste="return false;"
+    oncontextmenu="return false;"
+    class="mat-typography"
+  >
     <app-root></app-root>
     <script
       src="https://code.jquery.com/jquery-3.1.1.min.js"
